# bimato

./: .gitignore  README.rst  pyproject.toml
bimato/: __init__.py  api.py  core.py  helpers.py  network.py  poresize.py  utils.py
docs/source/: api.rst  conf.py  index.rst  user-guide.rst
tests/: test_bimato.py
