[tool.poetry]
name = "bimato"
version = "2022.1.2"
description = "Bio Matrix Topology (BiMaTo) is a library containing all the biopolymer matrix topology analyses published by the Biological Physics Group, (BIP), Peter Debye Institute, University Leipzig, Germany."
authors = ["Tony Fischer (tku137) <tonyfischer@mailbox.org>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.2"
scipy = "^1.9.0"
pandas = "^1.4.3"
scikit-image = "^0.19.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
pytest = "^7.1.2"
scriv = "^0.16.0"
Sphinx = "^5.1.1"
readlif = "^0.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
